[package]
name = "wasm_nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.6"
cc = "1.0"

[target.'cfg(windows)'.dependencies]
mlua = {version = "0.8.9", features = ["luajit", "module"]}

[target.'cfg(unix)'.dependencies]
mlua = {version = "0.8.9", features = ["luajit", "vendored", "module"]}

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
libc = "0.2.147"
serde = {version = "1.0.171",  features = ["derive"]}
serde_json = "1.0.103"
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"

[lib]
crate-type = ["cdylib"]

